# teams-chat-cli

./: .env.example  README.md  pyproject.toml  teams_cli.py
